# Parcial-metricas

./: Parcial_metricas_corte3.ipynb  README.md
Proyecto/: CMakeLists.txt  californiaHousingHPC.csv  extraerdata.cpp  main.cpp
Proyecto/Debug/: CMakeCache.txt  CMakeCache.txt.prev  VectorCosto.txt  VectorTheta.txt  build.ninja  cmake_install.cmake  data_normalizado.txt  promedio.txt  y_test_hat.txt  y_train_hat.txt
Proyecto/Debug/.cmake/api/v1/reply/: cache-v2-990f4d3ecabf4a1f93c1.json  codemodel-v2-74b4ccbb49e05b14cc93.json  index-2022-05-19T01-27-42-0634.json  target-Proyecto-Debug-a56d1486a74c649c3c50.json
Proyecto/Debug/.cmake/api/v1/reply.prev/: cache-v2-3ccf47aeb6b25d69fcbc.json  cmakeFiles-v1-93056106124f6ccadd72.json  codemodel-v2-391e2f676436fdd20756.json  index-2022-05-19T01-27-29-0055.json  target-Regresion-Debug-d55a146dd7a07dec6678.json
Proyecto/RL/: linealregresion.cpp
Proyecto/extraccion/: extraerdata.cpp
